--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@
     </head>
 
     <body background="asset/background.jpg">
-        <header> MY PERSONAL WEBSITE</header>
+        <header> xodivorce </header>
 
         <table border="1">
             <tr>
