--- a/school.html
+++ b/school.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/tinyurl.css">
 
     <body background="asset/download.jpg">
-        <header> MY PERSONAL WEBSITE</header>
+        <header> xodivorce</header>
         <table border="1">
          <tr>
                 <th class="active"> <a href="index.html"> <i class="fa fa-index"></i></a></th>
@@ -16,6 +16,4 @@
          </tr>
     </table>
 
-    <h1>Introduction</h1>
-        <p>Hello, <mark> i  </mark> study <del> at this school</del>  here</p>
-        <br>
+    
