--- a/projects.html
+++ b/projects.html
@@ -2,12 +2,12 @@
     <html>
 
         <head>
-        <title> My first Webpage </title>
+        <title> xodivorce </title>
         <link rel="stylesheet" href="https://tinyurl.com/fontawesome-icons">
         </head>
 
         <body background="asset/background.jpg">
-            <header> MY PERSONAL WEBSITE</header>
+            <header> xodivorce </header>
             <table border="1">
                 <tr>
                     <th class="active"> <a href="projects.html"> <i class="fa fa-index"></i></a></th>
